--- a/Application/Home/View/Index/indexTabs.html
+++ b/Application/Home/View/Index/indexTabs.html
@@ -13,7 +13,7 @@
           <ion-nav-view name="activity-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="个人中心" icon="ion-unie611" href="#/tab/personal">
+        <ion-tab title="个人中心" icon="ion-gerenzhongxin" href="#/tab/personal">
           <ion-nav-view name="personal-tab"></ion-nav-view>
         </ion-tab>
 
