--- a/Application/Home/View/Index/indexToBePaid.html
+++ b/Application/Home/View/Index/indexToBePaid.html
@@ -28,7 +28,22 @@
 			<p>入住时间：2015.11.25</p>
 			<div style="margin: -61px 0px 0px 142px;" class="button button-small button-positive pull-right">立即支付</div>
 		</div>
-
+		<div class="item item-thumbnail-left" href="#">
+			<img src="__IMG__/big.jpg">
+			<h2>房型：大床房</h2>
+			<p>价格：365.00</p>
+			<p>介绍：空调/电视/wifi</p>
+			<p>入住时间：2015.11.25</p>
+			<div style="margin: -61px 0px 0px 142px;" class="button button-small button-positive pull-right">立即支付</div>
+		</div>
+		<div class="item item-thumbnail-left" href="#">
+			<img src="__IMG__/big.jpg">
+			<h2>房型：大床房</h2>
+			<p>价格：365.00</p>
+			<p>介绍：空调/电视/wifi</p>
+			<p>入住时间：2015.11.25</p>
+			<div style="margin: -61px 0px 0px 142px;" class="button button-small button-positive pull-right">立即支付</div>
+		</div>
 	</div>
 
 </ion-content>
