--- a/Application/Home/View/Index/indexEvaluation.html
+++ b/Application/Home/View/Index/indexEvaluation.html
@@ -1,10 +1,7 @@
 <script id="templates/indexEvaluation.html" type="text/ng-template">
   <ion-view view-title="查看评论">
-  <div class="bar bar-header bar-positive">
-    <a class="button icon button-icon ion-chevron-left"></a>
-    <h1 class="title">所有评论</h1>
-  </div>
-  <div class="scroll-content  has-header">
+ 
+  <ion-content>
     <div class="list">
       <div class="item item-avatar" href="#">
         <img src="__IMG__/tupian.png" >
@@ -21,8 +18,10 @@
         </div>
       </div>
     </div>
+    <div class="padding">
      <a class="button button-block button-positive" href="#/tab/evaluationing">我要评论</a>
+     </div>
   </div>
-
+</ion-content>
 </ion-view>
 </script>
