--- a/Application/Home/View/Index/indexEvaluationing.html
+++ b/Application/Home/View/Index/indexEvaluationing.html
@@ -1,10 +1,7 @@
 <script id="templates/indexEvaluationing.html" type="text/ng-template">
 	<ion-view view-title="评论">
-	<div class="bar bar-header bar-positive">
-		<a class="button icon button-icon ion-chevron-left"></a>
-		<h1 class="title">我要评价</h1>
-	</div>
-	<div class="scroll-content has-header">
+		
+	<ion-content>
 		<div class="item item-thumbnail-left">
 			<img src="__IMG__/rujia.jpg">
 			<h2><i class="icon ion-social-yen"></i>120</h2>
@@ -26,7 +23,7 @@
 					<textarea type="text" placeholder="请输入您的评论" cols="60" rows="4" ></textarea>
 				</div>
 
-				<!-- <div class="item item-body"> -->
+				
 				<div class="row">
 					<div class="col col-33-center">
 						<button class="button button-small button-outline ">
@@ -35,18 +32,24 @@
 						</button>
 					</div>
 					<div class="col col-33">
-						<img src="__IMG__/rujia.png">
+						<div class="list">
+							<div class="item-avatar">
+							<img src="__IMG__/rujia.jpg">
+							</div>
+						</div>
 					</div>
 				</div>
-				<!-- </div> -->
+				
 			</div>
+
 			<a href="#/tab/success">
 			<div class="padding">
 				<button class="button button-full button-positive">
 					提交评论
 				</button>
 			</div></a>
-			<div>
-
-			</ion-view>
-		</script>
+		<div>
+	</div>
+	</ion-content>
+	</ion-view>
+	</script>
