--- a/Application/Home/View/Index/indexSuccess.html
+++ b/Application/Home/View/Index/indexSuccess.html
@@ -1,6 +1,6 @@
 <script id="templates/indexSuccess.html" type="text/ng-template">
 <ion-view view-title="评论成功">
-	<div class="scroll-content has-header padding commentsok">
+	<ion-content class="scroll-content has-header padding commentsok">
   <img src="__IMG__/mark.png">
   <h3>点评成功!</h3>
   <h3>获得积分+5</h3>
@@ -10,6 +10,7 @@
   <button class="button button-positive button-block">确定</button>
   </div>
 </div>
+</ion-content>
 </ion-view>
 </script>
 <style type="text/css">
