--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -12,42 +12,49 @@
 <!-- 酒店介绍 -->
 <div class="list">
     <div class="item item-thumbnail row"> 
-    <a href="#/tab/evaluation">
-      <div class="col">
-      <h1 class="energized">4.9分</h1>
-      <h2 class="energized">棒极了</h2>
-      <p>100%好评</p>
-      <p>84条评论></p>
-      </div></a>
-      <a href="#/tab/introduction">
-      <div class="col">
-      
-        <img src="__IMG__/home-ditu.jpg">
-      </div></a>
-      </div>
+      <a href="#/tab/evaluation">
+        <div class="col">
+        <h1 class="energized">4.9分</h1>
+        <h2 class="energized">棒极了</h2>
+        <p>100%好评</p>
+        <p>84条评论></p>
+        </div></a>
+        <a href="#/tab/introduction">
+        <div class="col">
+        
+          <img src="__IMG__/home-ditu.jpg">
+        </div>
+      </a>
+    </div>
     
+    <div class="list">
+      <a class="item tabs-icon-top" href="#/tab/introduction">
+      <i class="icon tabs-icon-top icon-rili"></i>房间WIFI
+      </a>
+    </div>
+
     <a class="item item-icon-left" href="#/tab/date">
-    <i class="icon iconfont icon-rili"></i>
-    12月01日-12月02日
-    <span class="item-note positive">
-      共1晚>
-    </span>
-  </a>
-  <a class="item item-icon-left" href="#/tab/confirmOrder">
+      <i class="icon iconfont icon-rili"></i>
+      12月01日-12月02日
+      <span class="item-note positive">
+        共1晚>
+      </span>
+    </a>
+  <a class="item" href="#/tab/confirmOrder">
     <h2>豪华套房</h2>
     <p>暂无房型信息</p>
     <span class="item-note energized">
       ￥328起
     </span>
   </a>
-  <a class="item item-icon-left" href="#/tab/confirmOrder">
+  <a class="item" href="#/tab/confirmOrder">
     <h2>景观大床房</h2>
     <p>55平米大床1.8m有wifi</p>
     <span class="item-note energized">
       ￥212起
     </span>
   </a>
-  <a class="item item-icon-left" href="#/tab/confirmOrder">
+  <a class="item" href="#/tab/confirmOrder">
     <h2>豪华家庭套房</h2>
     <p>80平米大床1.8m有wifi</p>
     <span class="item-note energized">
@@ -55,7 +62,7 @@
     </span>
   </a>
 </div>
-<div>
+<div class="list">
 <a class="item item-icon-left" href="#/tab/confirmOrder">
     <i class="icon ion-ios-clock-outline"></i>
     钟点房
@@ -63,7 +70,8 @@
       3小时/￥91起
     </span>
   </a>
-  </div>
+</div>
+
 </ion-view>
 </ion-content> 
 </script>
