--- a/Application/Home/View/Index/indexEvaluation.html
+++ b/Application/Home/View/Index/indexEvaluation.html
@@ -5,17 +5,27 @@
     <div class="list">
       <div class="item item-avatar" href="#">
         <img src="__IMG__/tupian.png" >
-        <div class="row">
-          <div class="col col-33">      
-            <h2>Venkman</h2>
+          <div class="row">
+            <div class="col col-33">      
+              <h2>Venkman</h2>
+            </div>
+            <div class="col"><img src="__IMG__/star.png"></div>
           </div>
-          <div class="col"><img src="__IMG__/star.png"></div>
-        </div>
-        <p>很好，值得推荐</p>
-        <div class="item-thumbnail">
-          <img src="__IMG__/rujia.jpg">
-          <img src="__IMG__/rujia.jpg">
-        </div>
+          <p>很好，值得推荐</p>
+          <div class="row">
+          <div class="list">
+            <div class="item-thumbnail-left">
+              <img src="__IMG__/rujia.jpg">
+            </div>
+          </div>
+
+          <div class="list">
+            <div class="item-thumbnail-left">
+              <img src="__IMG__/rujia.jpg">
+            </div>
+          </div>
+          
+          </div>
       </div>
     </div>
     <div class="padding">
