地图的引入

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -14,6 +14,7 @@
   <script src="{:U('indexApp.js')}"></script>
    <!-- <script src="__JS__/app.js"></script>
    <script src="__JS__/controllers.js"></script> -->
+  <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=U7N6PIKHKGEKgXmi5wqNfItn&services=&t=20151113040005"></script>
 
  </head>
  <body>
