--- a/Application/Home/View/Index/indexApp.js.html
+++ b/Application/Home/View/Index/indexApp.js.html
@@ -191,3 +191,22 @@ app.controller('SlideCtrl', function($scope) {
     '__IMG__/tupian.png',
   ];
 });
+
+app.controller('MapCtrl', function() {
+ // 百度地图API功能
+  var map = new BMap.Map("allmap");
+  var point = new BMap.Point(117.223579,39.119671);
+  map.centerAndZoom(point,12);
+  // 创建地址解析器实例
+  var myGeo = new BMap.Geocoder();
+  // 将地址解析结果显示在地图上,并调整地图视野
+  myGeo.getPoint("天津市河西区凯德国贸中心C座（近小白楼地铁站C出口）", function(point){
+    if (point) {
+      map.centerAndZoom(point, 16);
+      map.addOverlay(new BMap.Marker(point));
+    }else{
+      alert("您选择地址没有解析到结果!");
+    }
+  }, "天津市");
+});
+
