--- a/Application/Home/View/Index/indexRim.html
+++ b/Application/Home/View/Index/indexRim.html
@@ -1,15 +1,7 @@
 <script id="templates/indexRim.html" type="text/ng-template">
 <ion-view view-title="搜周边">
-	<div class="bar bar-header bar-positive">
-  <a href="#/app/capture" class="button button-icon icon ion-chevron-left"></a>
-  <h1 class="title">我的周边</h1>
-  <a href="#/app/capture" class="button button-icon icon ion-gear-a"></a>
-</div>
-
-<ion-content class="has-header">
-<div class="list ">
-  <img src="__IMG__/nanjing.png">
-</div>
+<ion-content ng-controller="MapCtrl">
+<div id="allmap" style="height:600px;width:100%;"></div>
 </ion-content>
 </ion-view>
 </script>
