--- a/Application/Home/View/Index/indexActivityDetails.html
+++ b/Application/Home/View/Index/indexActivityDetails.html
@@ -9,7 +9,7 @@
 					<p>住店送牛奶</p>
 				</div>
 				<div class="item item-body">
-					<img src ="__IMG__/niunai.jpg">
+					<img class="full-image" src ="__IMG__/niunai.jpg">
 					<p>
 						2015年11月24日之前，凡到本店住宿者，均可在晚七点以后在前台领取热牛奶一杯。
 					</p>
