--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -33,40 +33,61 @@
       </a>
     </div>
 
-    <a class="item item-icon-left" href="#/tab/date">
-      <i class="icon iconfont icon-rili"></i>
+    <a class="item" href="#/tab/date">
+      <i class="ion-rili"></i>
       12月01日-12月02日
       <span class="item-note positive">
         共1晚>
       </span>
     </a>
-  <a class="item" href="#/tab/confirmOrder">
-    <h2>豪华套房</h2>
-    <p>暂无房型信息</p>
-    <span class="item-note energized">
-      ￥328起
-    </span>
-  </a>
+  
   <a class="item" href="#/tab/confirmOrder">
     <h2>景观大床房</h2>
     <p>55平米大床1.8m有wifi</p>
     <span class="item-note energized">
-      ￥212起
+      ￥212起<i class="ion-down"></i>
     </span>
   </a>
+  <div class="item">
+      面积-55㎡<br>
+      位于6-24层<br>
+      大床<br>
+      独立卫浴<br>
+      有窗
+  </div>
+
   <a class="item" href="#/tab/confirmOrder">
     <h2>豪华家庭套房</h2>
     <p>80平米大床1.8m有wifi</p>
     <span class="item-note energized">
-      ￥368起
+      ￥368起<i class="ion-down"></i>
     </span>
   </a>
+  <div class="item">
+      面积-80㎡<br>
+      位于6-20层<br>
+      独立卫浴<br>
+      有窗
+  </div>
+  <a class="item" href="#/tab/confirmOrder">
+    <h2>豪华行政套房</h2>
+    <p>80平米大床1.8m有wifi</p>
+    <span class="item-note energized">
+      ￥368起<i class="ion-down"></i>
+    </span>
+  </a>
+  <div class="item">
+      面积-80㎡<br>
+      位于6-20层<br>
+      独立卫浴<br>
+      有窗
+  </div>
 </div>
 <div class="list">
-<a class="item item-icon-left" href="#/tab/confirmOrder">
-    <i class="icon ion-ios-clock-outline"></i>
+<a class="item" href="#/tab/confirmOrder">
+    <i class="ion-zhongdianfangbeijing"></i>
     钟点房
-    <span class="item-note positive">
+    <span class="item-note energized">
       3小时/￥91起
     </span>
   </a>
