--- a/Application/Home/View/Index/indexToBePaid.html
+++ b/Application/Home/View/Index/indexToBePaid.html
@@ -8,7 +8,8 @@
 			<p>价格：365.00</p>
 			<p>介绍：空调/电视/wifi</p>
 			<p>入住时间：2015.11.25</p>
-			<div class="button button-small button-positive pull-right" style="margin: -61px 0px 0px 142px;">立即支付</div>
+			<div class="button button-icon-right button-small button-positive
+                 pull button-right">立即支付</div>
 		</div>
 
 		<div class="item item-thumbnail-left" href="#">
@@ -17,7 +18,8 @@
 			<p>价格：365.00</p>
 			<p>介绍：空调/电视/wifi</p>
 			<p>入住时间：2015.11.25</p>
-			<div class="button button-small button-positive pull-right" style="margin: -61px 0px 0px 142px;">立即支付</div>
+			<div class="button button-icon-right button-small button-positive
+                 pull button-right">立即支付</div>
 		</div>
 
 		<div class="item item-thumbnail-left" href="#">
@@ -26,7 +28,8 @@
 			<p>价格：365.00</p>
 			<p>介绍：空调/电视/wifi</p>
 			<p>入住时间：2015.11.25</p>
-			<div style="margin: -61px 0px 0px 142px;" class="button button-small button-positive pull-right">立即支付</div>
+			<div class="button button-icon-right button-small button-positive
+                 pull button-right">立即支付</div>
 		</div>
 		<div class="item item-thumbnail-left" href="#">
 			<img src="__IMG__/big.jpg">
@@ -34,7 +37,8 @@
 			<p>价格：365.00</p>
 			<p>介绍：空调/电视/wifi</p>
 			<p>入住时间：2015.11.25</p>
-			<div style="margin: -61px 0px 0px 142px;" class="button button-small button-positive pull-right">立即支付</div>
+			<div class="button button-icon-right button-small button-positive
+                 pull button-right">立即支付</div>
 		</div>
 		<div class="item item-thumbnail-left" href="#">
 			<img src="__IMG__/big.jpg">
@@ -42,7 +46,8 @@
 			<p>价格：365.00</p>
 			<p>介绍：空调/电视/wifi</p>
 			<p>入住时间：2015.11.25</p>
-			<div style="margin: -61px 0px 0px 142px;" class="button button-small button-positive pull-right">立即支付</div>
+			<div class="button button-icon-right button-small button-positive
+                 pull button-right">立即支付</div>
 		</div>
 	</div>
 
