调整图标大小

--- a/Application/Home/View/Index/indexTabs.html
+++ b/Application/Home/View/Index/indexTabs.html
@@ -9,7 +9,7 @@
           <ion-nav-view name="rim-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="活动" icon="ion-iconfonticon" href="#/tab/activity">
+        <ion-tab title="活动" icon="ion-unie637" href="#/tab/activity">
           <ion-nav-view name="activity-tab"></ion-nav-view>
         </ion-tab>
 
