--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -28,8 +28,10 @@
     </div>
     
     <div class="list">
-      <a class="item tabs-icon-top" href="#/tab/introduction">
-      <i class="icon tabs-icon-top icon-rili"></i>房间WIFI
+      <a class="item" href="#/tab/introduction">
+      <i class="ion-wifi"></i>
+      <i class="ion-tingche"></i>
+      <i class="ion-feng"></i>
       </a>
     </div>
 
