评论成功评论失败的路由

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -14,7 +14,7 @@
   <script src="{:U('indexApp.js')}"></script>
    <!-- <script src="__JS__/app.js"></script>
    <script src="__JS__/controllers.js"></script> -->
-  <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=U7N6PIKHKGEKgXmi5wqNfItn&services=&t=20151113040005"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=U7N6PIKHKGEKgXmi5wqNfItn"></script>
 
  </head>
  <body>
@@ -42,6 +42,8 @@
 <include file="indexToBeEvaluation" />
 <include file="indexIntegral" />
 <include file="indexAllOrder" />
+<include file="indexPaySuccess" />
+<include file="indexPayError" />
 </body>
 
 
