--- a/Application/Home/View/Index/indexIntroduction.html
+++ b/Application/Home/View/Index/indexIntroduction.html
@@ -1,5 +1,6 @@
 <script id="templates/indexIntroduction.html" type="text/ng-template">
-	<ion-view view-title="酒店介绍">
-
-	</ion-view>
+<ion-view view-title="酒店介绍">
+<ion-content>
+</ion-content>
+</ion-view>
 </script>
