--- a/Application/Home/View/Index/indexApp.js.html
+++ b/Application/Home/View/Index/indexApp.js.html
@@ -32,6 +32,15 @@ app.config(function($stateProvider, $urlRouterProvider,$ionicConfigProvider){
             }
         }
     })
+    .state('tabs.introduct',{
+        url: "/introduct",
+        views:{
+            //酒店介绍
+            'home-tab':{
+                templateUrl: "templates/indexIntroduction.html"
+            }
+        }
+    })
     .state('tabs.evaluation',{
         url: "/evaluation",
         views:{
@@ -65,15 +74,6 @@ app.config(function($stateProvider, $urlRouterProvider,$ionicConfigProvider){
             //我的积分
             'home-tab':{
                 templateUrl: "templates/indexIntegral.html"
-            }
-        }
-    })
-    .state('tabs.introduction',{
-        url: "/introduction",
-        views:{
-            //酒店介绍
-            'home-tab':{
-                templateUrl: "templates/indexIntroduction.html"
             }
         }
     })
@@ -155,6 +155,24 @@ app.config(function($stateProvider, $urlRouterProvider,$ionicConfigProvider){
         'personal-tab': {
             //待入住
           templateUrl: "templates/indexToBeStay.html"
+        }
+      }
+    })
+    .state('tabs.paySuccess', {
+      url: "/paySuccess",
+      views: {
+        'personal-tab': {
+            //支付成功
+          templateUrl: "templates/indexPaySuccess.html"
+        }
+      }
+    })
+    .state('tabs.payError', {
+      url: "/payError",
+      views: {
+        'personal-tab': {
+            //支付失败
+          templateUrl: "templates/indexPayError.html"
         }
       }
     })
