--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -28,10 +28,13 @@
     </div>
     
     <div class="list">
-      <a class="item" href="#/tab/introduction">
+      <a class="item" href="#/tab/intro">
       <i class="ion-wifi"></i>
-      <i class="ion-tingche"></i>
-      <i class="ion-feng"></i>
+            <i class="ion-tingche"></i>
+            <i class="ion-feng"></i>
+            <i class="ion-feiji2"></i>
+            <i class="ion-on-24xiaoshireshui"></i>
+            <i class="ion-jinzhixiyan"></i>
       </a>
     </div>
 
