--- a/Application/Home/View/Index/indexConfirmOrder.html
+++ b/Application/Home/View/Index/indexConfirmOrder.html
@@ -56,7 +56,8 @@
 
     <div class="bar bar-footer bar-stable">
       <h4 class="dollar pull-right">在线支付：￥365.00</h4>
-      <div class="button button-large button-positive pull-right">提交订单</div>
+      <a href="#/tab/paySuccess1">
+      <div class="button button-large button-positive pull-right">提交订单</div></a>
     </div>
 	</ion-content>
 </ion-view>
