--- a/Application/Home/View/Index/indexToBePaid.html
+++ b/Application/Home/View/Index/indexToBePaid.html
@@ -8,8 +8,8 @@
 			<p>价格：365.00</p>
 			<p>介绍：空调/电视/wifi</p>
 			<p>入住时间：2015.11.25</p>
-			<div class="button button-icon-right button-small button-positive
-                 pull button-right">立即支付</div>
+			<a href="#/tab/paySuccess"><div class="button button-icon-right button-small button-positive
+                 pull button-right">立即支付</div></a>
 		</div>
 
 		<div class="item item-thumbnail-left" href="#">
@@ -18,8 +18,8 @@
 			<p>价格：365.00</p>
 			<p>介绍：空调/电视/wifi</p>
 			<p>入住时间：2015.11.25</p>
-			<div class="button button-icon-right button-small button-positive
-                 pull button-right">立即支付</div>
+			<a href="#/tab/paySuccess"><div class="button button-icon-right button-small button-positive
+                 pull button-right">立即支付</div></a>
 		</div>
 
 		<div class="item item-thumbnail-left" href="#">
@@ -28,8 +28,8 @@
 			<p>价格：365.00</p>
 			<p>介绍：空调/电视/wifi</p>
 			<p>入住时间：2015.11.25</p>
-			<div class="button button-icon-right button-small button-positive
-                 pull button-right">立即支付</div>
+			<a href="#/tab/payError"><div class="button button-icon-right button-small button-positive
+                 pull button-right">立即支付</div></a>
 		</div>
 		<div class="item item-thumbnail-left" href="#">
 			<img src="__IMG__/big.jpg">
