--- a/Application/Home/View/Index/indexTabs.html
+++ b/Application/Home/View/Index/indexTabs.html
@@ -5,7 +5,7 @@
           <ion-nav-view name="home-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="搜周边" icon="ion-zhoubian" href="#/tab/rim">
+        <ion-tab title="搜周边" icon="ion-lbs" href="#/tab/rim">
           <ion-nav-view name="rim-tab"></ion-nav-view>
         </ion-tab>
 
@@ -13,7 +13,7 @@
           <ion-nav-view name="activity-tab"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="个人中心" icon="ion-gerenzhongxin" href="#/tab/personal">
+        <ion-tab title="个人中心" icon="ion-studyuser" href="#/tab/personal">
           <ion-nav-view name="personal-tab"></ion-nav-view>
         </ion-tab>
 
