解决酒店介绍页面出不来的问题

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -24,13 +24,15 @@
   </ion-nav-bar>
 <ion-nav-view></ion-nav-view>
 <!-- include -->
+<include file="indexTotel" />
 <include file="indexTabs" />
 <include file="indexHome" />
+<include file="indexRim" />
 <include file="indexFullTime" />
 <include file="indexDate" />
 <include file="indexConfirmOrder" />
-<include file="indexIntroduction" />
-<include file="indexRim" />
+
+<include file="indexTotel" />
 <include file="indexEvaluation" />
 <include file="indexEvaluationing" />
 <include file="indexSuccess" />
