--- a/Application/Home/View/Index/indexApp.js.html
+++ b/Application/Home/View/Index/indexApp.js.html
@@ -86,12 +86,12 @@ app.config(function($stateProvider, $urlRouterProvider,$ionicConfigProvider){
             }
         }
     })
-     .state('tabs.introduce',{
-        url: "/introduce",
+    .state('tabs.totel',{
+        url: "/totel",
         views:{
             //酒店介绍
             'home-tab':{
-                templateUrl: "templates/indexIntroduce.html"
+                templateUrl: "templates/indexTotel.html"
             }
         }
     })
