--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -19,16 +19,16 @@
         <p>100%好评</p>
         <p>84条评论></p>
         </div></a>
-        <a href="#/tab/introduction">
+        
         <div class="col">
         
           <img src="__IMG__/home-ditu.jpg">
         </div>
-      </a>
+     
     </div>
     
     <div class="list">
-      <a class="item" href="#/tab/intro">
+      <a class="item" href="#/tab/totel">
       <i class="ion-wifi"></i>
             <i class="ion-tingche"></i>
             <i class="ion-feng"></i>
