--- a/Application/Home/View/Index/indexTotel.html
+++ b/Application/Home/View/Index/indexTotel.html
@@ -1,4 +1,4 @@
-<script id="templates/indexIntroduce.html" type="text/ng-template">
+<script id="templates/indexTotel.html" type="text/ng-template">
 <ion-view view-title="酒店介绍">
 <ion-content>
 </ion-content>
