--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,17 +1,4 @@
-@font-face {
-    font-family: 'fontawesome';
-    src:url('../fonts/fontawesome-webfont.eot');
-    src:url('../fonts/fontawesome-webfont.eot') format('embedded-opentype'),
-        url('../fonts/fontawesome-webfont.woff') format('woff'),
-        url('../fonts/fontawesome-webfont.ttf') format('truetype'),
-        url('../fonts/fontawesome-webfont.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-.icon-google-wallet:before {
-    font-family: "fontawesome";
-    content: "\f1ee";
-}
+
  .slides {
   height: 200px;
   margin: 0 auto;
@@ -23,3 +10,6 @@
   width: 100%;
 }
 
+.success{
+  color:green;
+}
