增加酒店介绍页

--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -4,14 +4,14 @@
 <!-- 图片轮播 -->
       <ion-slide-box class="slides">
         <ion-slide class="box" ng-repeat="item in countEm">
-       
+
             <img ng-src="{{ item }}">
-          
+
         </ion-slide>
       </ion-slide-box>
 <!-- 酒店介绍 -->
 <div class="list">
-    <div class="item item-thumbnail row"> 
+    <div class="item item-thumbnail row">
       <a href="#/tab/evaluation">
         <div class="col">
         <h1 class="energized">4.9分</h1>
@@ -19,16 +19,16 @@
         <p>100%好评</p>
         <p>84条评论></p>
         </div></a>
-        
+
         <div class="col">
-        
+
           <img src="__IMG__/home-ditu.jpg">
         </div>
-     
+
     </div>
-    
+
     <div class="list">
-      <a class="item" href="#/tab/totel">
+      <a class="item" href="#/tab/hotel">
       <i class="ion-wifi"></i>
             <i class="ion-tingche"></i>
             <i class="ion-feng"></i>
@@ -45,7 +45,7 @@
         共1晚>
       </span>
     </a>
-  
+
   <a class="item" href="#/tab/confirmOrder">
     <h2>景观大床房</h2>
     <p>55平米大床1.8m有wifi</p>
@@ -99,5 +99,5 @@
 </div>
 
 </ion-view>
-</ion-content> 
+</ion-content>
 </script>
