--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -24,7 +24,7 @@
   </ion-nav-bar>
 <ion-nav-view></ion-nav-view>
 <!-- include -->
-<include file="indexTotel" />
+<include file="indexHotel" />
 <include file="indexTabs" />
 <include file="indexHome" />
 <include file="indexRim" />
@@ -32,7 +32,7 @@
 <include file="indexDate" />
 <include file="indexConfirmOrder" />
 
-<include file="indexTotel" />
+<include file="indexHotel" />
 <include file="indexEvaluation" />
 <include file="indexEvaluationing" />
 <include file="indexSuccess" />
