--- a/Application/Home/View/Index/indexActivityDetails.html
+++ b/Application/Home/View/Index/indexActivityDetails.html
@@ -1,8 +1,7 @@
 <script id="templates/indexActivityDetails.html" type="text/ng-template">
+<ion-content>
 	<ion-view view-title="住店送牛奶">
-	<div class="list  has-header">
-		<div class="list">
-			<div class="list card">
+	<div class="list card  has-header">
 				<div class="item item-avatar">
 					<img src="__IMG__/niunai.jpg">
 					<h2>活动</h2>
