--- a/Application/User/View/Index/detail.html
+++ b/Application/User/View/Index/detail.html
@@ -1,5 +1,5 @@
-<label>用户名</label>:{$user[name]}</br>
-<label>密码</label>:{$user[password]}</br>
+<label>用户名</label>:{:$M->getUserName()}</br>
+<label>密码</label>:{:$M->getPassword()}</br>
 <label>手机号</label>:{$user[phonenumber]}</br>
 <label>地址</label>:{$user[address]}</br>
 <label>邮箱</label>:{$user[email]}</br>
