增加滚动效果

--- a/Application/Home/View/Index/indexActivityDetails.html
+++ b/Application/Home/View/Index/indexActivityDetails.html
@@ -1,7 +1,7 @@
 <script id="templates/indexActivityDetails.html" type="text/ng-template">
-<ion-content>
 	<ion-view view-title="住店送牛奶">
-	<div class="list card  has-header">
+	<ion-content>
+			<div class="list card">
 				<div class="item item-avatar">
 					<img src="__IMG__/niunai.jpg">
 					<h2>活动</h2>
@@ -16,5 +16,6 @@
 			</div>
 		</div>
 	</div>
+</ion-content>
 </ion-view>
 </script>
