--- a/Application/Home/View/Index/indexActivity.html
+++ b/Application/Home/View/Index/indexActivity.html
@@ -1,9 +1,7 @@
 <script id="templates/indexActivity.html" type="text/ng-template">
 <ion-view view-title="最新活动">
-	<div class="list  has-header">
-		<div class="list">
-		    <div class="list card">
-
+<ion-content>
+	<div class="list ">
   <div class="item item-avatar">
     <img src="__IMG__/jian.jpg">
     <h2>首单立减</h2>
@@ -29,11 +27,7 @@
     <h2>积分兑好礼</h2>
     <p>截止到2015年11月24日</p>
   </div>
-  
-
 </div>
-	    </div>
-	    
-	</div>
+</ion-content>
 	</ion-view>
 </script>
