--- a/Application/Home/View/Index/indexPersonalCenter.html
+++ b/Application/Home/View/Index/indexPersonalCenter.html
@@ -4,7 +4,7 @@
 	<div class="list">
 		<a class="item item-avatar" href="#">
 			<img src="__IMG__/1024.jpg">
-			<h2>昵称</h2>
+			<h3>昵称</h3>
 			<p>手机号</p>
 		</a>
 
@@ -14,15 +14,15 @@
 
 		<div class="button-bar">
 			<a href="#/tab/toBePaid" class="button button-light">
-				<i class="icon  ion-ios-folder-outline"></i>
+				<i class="icon ion-daizhifu"></i>
 				<p>待支付</p>
 			</a>
 			<a href="#/tab/toBeEvaluation" class="button button-light">
-				<i class="icon ion-ios-rose-outline"></i>
+				<i class="icon ion-daipingjia2"></i>
 				<p>待评价</p>
 			</a>
 			<a href="#/tab/toBeStay" class="button button-light">
-				<i class="icon ion-ios-browsers-outline"></i>
+				<i class="icon ion-ruzhu"></i>
 				<p>待入住</p>
 			</a>
 	</div>
@@ -32,19 +32,19 @@
 	</div>
 
 	<a href="#/tab/allOrder" class="item item-icon-left item-icon-right">
-		<i class="icon ion-ios-list-outline"></i>
+		<i class="icon ion-quanbudingdan"></i>
 		全部订单
-		<i class="icon ion-ios-arrow-right"></i>
+		<i class="icon ion-iconfontunie61f"></i>
 	</a>
 	<a href="#/tab/integral2" class="item item-icon-left item-icon-right">
-		<i class="icon ion-ios-pricetags-outline"></i>
+		<i class="icon ion-jifen"></i>
 		查看积分
-		<i class="icon ion-ios-arrow-right"></i>
+		<i class="icon ion-iconfontunie61f"></i>
 	</a>
-	<a class="item item-icon-left" href="#">
-		<i class="icon ion-ios-telephone-outline"></i>
+	<a class="item item-icon-left item-icon-right" href="#">
+		<i class="icon ion-kefu"></i>
 		客服  15302056835
-		
+        <i class="icon ion-iconfontunie61f"></i>
 	</a>
 </div>
 </ion-content>
