--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -12,29 +12,28 @@
 <!-- 酒店介绍 -->
 <div class="list">
     <div class="item item-thumbnail row">
-      <a href="#/tab/evaluation">
         <div class="col">
-        <h1 class="energized">4.9分</h1>
-        <h2 class="energized">棒极了</h2>
-        <p>100%好评</p>
-        <p>84条评论></p>
-        </div></a>
-
+          <a href="#/tab/evaluation">
+            <h1 class="energized">4.9分</h1>
+            <h2 class="energized">棒极了</h2>
+            <p>100%好评</p>
+            <p>84条评论></p>
+          </a>
+        </div>
         <div class="col">
-
           <img src="__IMG__/home-ditu.jpg">
         </div>
-
     </div>
 
     <div class="list">
       <a class="item" href="#/tab/hotel">
-      <i class="ion-wifi"></i>
-            <i class="ion-tingche"></i>
-            <i class="ion-feng"></i>
-            <i class="ion-feiji2"></i>
-            <i class="ion-on-24xiaoshireshui"></i>
-            <i class="ion-jinzhixiyan"></i>
+        <i class="ion-shineiwifi"></i>
+        <i class="ion-wifi"></i>
+        <i class="ion-tingche"></i>
+        <i class="ion-feng"></i>
+        <i class="ion-24xiaoshireshui"></i>
+        <i class="ion-feiji2"></i>
+        <i class="ion-jinzhixiyan"></i>
       </a>
     </div>
 
