--- a/Application/Home/View/Index/indexPersonalCenter.html
+++ b/Application/Home/View/Index/indexPersonalCenter.html
@@ -8,27 +8,19 @@
 			<p>手机号</p>
 		</a>
 
-		<div class="item item-divider">
-
-		</div>
-
-		<div class="button-bar">
-			<a href="#/tab/toBePaid" class="button button-light">
+		<div class="item row">
+			<a href="#/tab/toBePaid" class="col button  button-light">
 				<i class="icon ion-daizhifu"></i>
 				<p>待支付</p>
 			</a>
-			<a href="#/tab/toBeEvaluation" class="button button-light">
+			<a href="#/tab/toBeEvaluation" class="col button  button-light">
 				<i class="icon ion-daipingjia2"></i>
 				<p>待评价</p>
 			</a>
-			<a href="#/tab/toBeStay" class="button button-light">
+			<a href="#/tab/toBeStay" class="col button  button-light">
 				<i class="icon ion-ruzhu"></i>
 				<p>待入住</p>
 			</a>
-	</div>
-
-	<div class="item item-divider">
-
 	</div>
 
 	<a href="#/tab/allOrder" class="item item-icon-left item-icon-right">
@@ -36,15 +28,14 @@
 		全部订单
 		<i class="icon ion-iconfontunie61f"></i>
 	</a>
-	<a href="#/tab/integral2" class="item item-icon-left item-icon-right">
+	<a href="#/tab/integral" class="item item-icon-left item-icon-right">
 		<i class="icon ion-jifen"></i>
 		查看积分
 		<i class="icon ion-iconfontunie61f"></i>
 	</a>
-	<a class="item item-icon-left item-icon-right" href="#">
+	<a class="item item-icon-left" href="#">
 		<i class="icon ion-kefu"></i>
 		客服  15302056835
-        <i class="icon ion-iconfontunie61f"></i>
 	</a>
 </div>
 </ion-content>
